1.4.0i4:
    Checks & Agents:
    * 4104 veeam_tapejobs: New check to monitor Veeam tape jobs
    * 4170 local: local check is now clusteraware. Best or worst state in cluster mode can be configured...
    * 4171 FIX: perle_psmu: fixed value error...
    * 4172 FIX: smart.temp: fixed discovery and check function...
    * 4173 FIX: if.include: ignore some more keys in 'Network interfaces and switch ports' rule which are only used for interface grouping
    * 4207 FIX: mk_jolokia: Use configured port as default instance name...
            NOTE: Please refer to the migration notes!
    * 4208 FIX: mk_jolokia: Plugin now works with jolokia versions requiring the base url to finish with a slash...

    Multisite:
    * 4169 View action: Default values of sticky, notification and persistent options can now be configured via global settings....
    * 4143 FIX: Fixed possible log spam "MKAuthException: Invalid credentials" in web.log...
    * 4004 FIX: Fixed exception when viewing availability of BI aggregations...

    WATO:
    * 4142 New extended search dialog for rulesets and rules...
    * 4003 FIX: esx_vsphere_objects: fixed check parameters display bug during WATO service discovery

    Notifications:
    * 4197 FIX: Fix sending notification to global fallback email address

    Reporting & Availability:
    * 3652 FIX: Unbreak PDF exports...

    Event Console:
    * 4154 Do not send notifications if host found and currently in downtime...
            NOTE: Please refer to the migration notes!
    * 4155 FIX: Do not perform actions on events if overflow limit is active...
    * 4156 FIX: Fix off-by-one error in EC limit handling...


1.4.0i3:
    Core & Setup:
    * 3978 FIX: mkbackup: Fixed backup to some CIFS shares ([Errno 13] Permission denied) '...')...
    * 4078 FIX: Fixed handling of hosts with non resolvable IP addresses during runtime...

    Checks & Agents:
    * 3988 Windows agent: new global option disabled_sections...